# mcp-terraform-assistant

./: .dockerignore  .gitignore  Dockerfile  README.md  claude_desktop_config.json  docker-compose.yml  main.py  pyproject.toml
examples/aws-s3/: README.md  main.tf  outputs.tf  variables.tf
mcp/: __init__.py  config.py  main.py  server.py
terraform/: main.tf  terraform.tfvars  variables.tf
tests/: main_test.py
